# fresh-mint

./: .gitignore  Makefile  README.md  dependency-reduced-pom.xml  docker-compose.yaml  pom.xml
rust-consumer/: Cargo.toml
rust-consumer/src/: main.rs
rust-producer/: Cargo.toml
rust-producer/src/: main.rs
src/main/java/org/example/flink/: SessionWindowJob.java  SlidingWindowJob.java  StreamingJob.java  TumblingWindowJob.java  WindowingJob.java
src/main/java/org/example/flink/util/: Event.java  EventDeserializationSchema.java  WindowResult.java  WindowResultSerializationSchema.java
src/main/java/org/example/kafka/: SimpleProducer.java
